feat: complete herness renovation contract and UI flow